# homographs

./: README.md  main.py  pyproject.toml
homographs/: canonicalize.py  main.py
tests/: Test Cases
