[tool.poetry]
name = "homographs"
version = "0.1.0"
description = ""
authors = ["darceerl <darcee.quebe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"

[tool.poetry.scripts]
homographs = 'homographs.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
